# truefix

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  deny.toml  rust-toolchain.toml
crates/truefix/: Cargo.toml  README.md
crates/truefix-at/: Cargo.toml  README.md
crates/truefix-at/src/: lib.rs  runner.rs  scenarios.rs
crates/truefix-at/tests/: all_versions_have_validators.rs  audit006_protocol_scenarios.rs  buffer_empty_at_scenario_end.rs  check_match_flags_extra_fields.rs  conformance.rs  coverage.rs  fixed_identity_acceptor_scenarios.rs  per_scenario_reporting.rs  read_message_three_outcomes.rs
crates/truefix-binary/: Cargo.toml  README.md
crates/truefix-binary/src/: ir.rs  lib.rs
crates/truefix-binary/tests/: fast_delta.rs  fast_multi_template.rs  fast_roundtrip.rs  ir_conversion.rs  observability.rs  sbe_multi_schema.rs  sbe_roundtrip.rs
crates/truefix-config/: Cargo.toml  README.md
crates/truefix-config/src/: builder.rs  keys.rs  lib.rs
crates/truefix-config/tests/: audit006_config_defaults.rs  audit006_config_parser.rs  circular_var_reference_errors.rs  config_errors.rs  dns_resolved_at_connect_time.rs  initiator_robustness_mapping.rs  key_coverage.rs  log_message_when_session_not_found.rs  logout_timeout_default.rs  network_hardening_mapping.rs  precision_and_bool_parsing.rs  protocol_config.rs  schedule_mapping.rs  session_identity_mapping.rs  session_switches_mapping.rs  socket_and_failover_mapping.rs  store_and_log_mapping.rs  unresolved_variable_line_number.rs  validation_key_wiring.rs  validator_mapping.rs
crates/truefix-core/: Cargo.toml  README.md
crates/truefix-core/benches/: codec.rs
crates/truefix-core/src/: cracker.rs  error.rs  factory.rs  field.rs  field_map.rs  framing.rs  group.rs  lib.rs  message.rs  tags.rs
crates/truefix-core/tests/: audit006_codec_strictness.rs  audit006_field_diagnostics.rs  begin_string_format.rs  checksum_position_verification.rs  data_field_verification.rs  decode_max_body_len_consistency.rs  decode_requires_msg_type.rs  encoded_leg_pairs.rs  field_order.rs  field_order_encode.rs  field_types.rs  fieldmap_set_removes_duplicates.rs  fixt_header_tags.rs  frame_checksum_overflow_hardening.rs  framing_bounds.rs  garbled.rs  group_count_round_trip.rs  group_restructure.rs  groups.rs  header_trailer_groups.rs  members_api.rs  reference_vectors.rs  render_members_ordered_no_dup.rs  reverse_route.rs  roundtrip.rs  scratch_audit_verify2.rs  signature_length.rs  tag_zero_rejected.rs  timestamp_leniency.rs  versions.rs
crates/truefix-dict/: Cargo.toml  README.md  build.rs
crates/truefix-dict/dict-src/: README.md
crates/truefix-dict/src/: codegen.rs  fast_template.rs  fix_repository.rs  fixt.rs  hash.rs  lib.rs  model.rs  orchestra.rs  parser.rs  qfj_xml.rs  sbe_schema.rs  validate.rs  vendor_xml.rs
crates/truefix-dict/tests/: audit006_required_version.rs  audit006_validation.rs  char_field_version_leniency.rs  cli.rs  codegen.rs  codegen_enum_dedup.rs  codegen_hardening.rs  codegen_parse_dict_errors.rs  component.rs  component_equivalence.rs  cyclic_group_recursion_bound.rs  day_of_month_and_negative_ranges.rs  dictionary_coverage.rs  dual_track.rs  duplicate_dict_definitions_error.rs  empty_applverid_fallback.rs  empty_value_inside_group.rs  extend.rs  extend_detects_name_collision.rs  fast_template_parse.rs  field_order.rs  field_order_production.rs  field_types_extended.rs  fix5_applverid_dispatch.rs  fix5_subversion_parsing.rs  fix_repository_group_converter_fix.rs  fixt.rs  generate_code_hash_consistency.rs  group_count_type_check.rs  group_decode.rs  group_recursive_validation.rs  group_validation.rs  header_group_validation.rs  load_from_file.rs  month_year_local_mkt_date_format.rs  multiple_char_value_per_token.rs  orchestra_conversion.rs  orchestra_map_type_parity.rs  parse.rs  provenance_headers.rs  (+10 more)
crates/truefix-futu-client/: Cargo.toml  README.md  build.rs
crates/truefix-futu-client/examples/: futu_cli.rs
crates/truefix-futu-client/proto/: Common.proto  GetGlobalState.proto  GetUserInfo.proto  InitConnect.proto  Notify.proto  Qot_Common.proto  Qot_GetArkActiveTransaction.proto  Qot_GetArkFundHolding.proto  Qot_GetArkStockDynamic.proto  Qot_GetBasicQot.proto  Qot_GetBroker.proto  Qot_GetCapitalDistribution.proto  Qot_GetCapitalFlow.proto  Qot_GetCodeChange.proto  Qot_GetCompanyExecutiveBackground.proto  Qot_GetCompanyExecutives.proto  Qot_GetCompanyOperationalEfficiency.proto  Qot_GetCompanyProfile.proto  Qot_GetCorporateActionsBuybacks.proto  Qot_GetCorporateActionsDividends.proto  Qot_GetCorporateActionsStockSplits.proto  Qot_GetDailyShortVolume.proto  Qot_GetDividendCalendar.proto  Qot_GetDividendRank.proto  Qot_GetEarningsBeatRank.proto  Qot_GetEarningsCalendar.proto  Qot_GetEconomicCalendar.proto  Qot_GetFedWatchDotPlot.proto  Qot_GetFedWatchTargetRate.proto  Qot_GetFinancialsEarningsPriceHistory.proto  Qot_GetFinancialsEarningsPriceMove.proto  Qot_GetFinancialsRevenueBreakdown.proto  Qot_GetFinancialsStatements.proto  Qot_GetFutureInfo.proto  Qot_GetHeatMapData.proto  Qot_GetHighDividendSOERank.proto  Qot_GetHistoryKL.proto  Qot_GetHistoryKLPoints.proto  Qot_GetHoldingChangeList.proto  Qot_GetHotList.proto  (+105 more)
crates/truefix-futu-client/src/: actor.rs  client.rs  error.rs  handle.rs  lib.rs  pb.rs  proto_id.rs  push.rs  quote.rs  rpc.rs  trade.rs  transport.rs
crates/truefix-futu-client/tests/: mock_opend.rs
crates/truefix-ig-client/: Cargo.toml  README.md
crates/truefix-ig-client/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
crates/truefix-log/: Cargo.toml  README.md
crates/truefix-log/src/: composite.rs  file.rs  lib.rs  mongo.rs  mssql.rs  prefix.rs  redb.rs  screen.rs  sql.rs  tracing_log.rs
crates/truefix-log/tests/: audit006_file_growth.rs  (+12 more)
crates/truefix-okx-client/: Cargo.toml  README.md  THIRD_PARTY.md
crates/truefix-session/: Cargo.toml  README.md
crates/truefix-store/: Cargo.toml  README.md
crates/truefix-transport/: Cargo.toml  README.md
crates/truefix-twsapi-client/: Cargo.toml  README.md  build.rs
(+547 files in other folders)
