# TrueFix cargo workspace. See specs/001-fix-engine-parity/plan.md for the layered design.
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/zhangjiayin/truefix"
authors = ["Zhang Jiayin"]

# Lint policy (Constitution Principle I). `unsafe_code = forbid` is global; the
# critical-path clippy denies (unwrap/expect/panic/indexing) are applied per-crate
# on non-test builds via `#![cfg_attr(not(test), deny(...))]` in each lib.rs.
[workspace.lints.rust]
unsafe_code = "forbid"

# Shared dependency versions (single source of truth). Member crates opt in with
# `<dep>.workspace = true` as each stage needs them; unused entries are harmless.
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = { version = "1", features = ["std"] }
# NEW-11 (feature 009): OS-native trust store fallback when no explicit SocketTrustStore is
# configured. Apache-2.0 OR MIT (same maintainer org as `rustls`) — Constitution Principle III.
rustls-native-certs = "0.8"
thiserror = "2"
rust_decimal = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
# GAP-10 (feature 006): IANA timezone-name acceptance for `TimeZone` (`Schedule`'s DST-aware named
# zones, vs. the pre-existing fixed-offset-only `TimeZone=+05:00` form). BSD-3-Clause (permissive,
# Apache-2.0/MIT-compatible — Constitution Principle III).
time-tz = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio"] }
tracing = "0.1"
metrics = "0.24"
async-trait = "0.1"
quick-xml = "0.41"
ppp = "2"
tokio-socks = "0.5"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"] }
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.13", default-features = false, features = ["http2", "json", "rustls", "socks"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
url = "2"
redb = "4"
mongodb = "3"
# T177/T178 (feature 009, NEW-35/36): already present transitively (see Cargo.lock) — promoted to
# a direct `truefix-core` dependency to replace hand-rolled `.iter().position()` byte-scanning in
# the decode/framing hot path with a SIMD-accelerated search. Unlicense OR MIT (permissive,
# Apache-2.0/MIT-compatible — Constitution Principle III).
memchr = "2"
prost = "0.14"
prost-build = "0.14"
bytes = "1"
truefix-core = { path = "crates/truefix-core", version = "0.1.0" }
truefix-dict = { path = "crates/truefix-dict", version = "0.1.0" }
truefix-session = { path = "crates/truefix-session", version = "0.1.0" }
truefix-transport = { path = "crates/truefix-transport", version = "0.1.0" }
truefix-config = { path = "crates/truefix-config", version = "0.1.0" }
truefix-store = { path = "crates/truefix-store", version = "0.1.0" }
truefix-log = { path = "crates/truefix-log", version = "0.1.0" }
truefix-binary = { path = "crates/truefix-binary", version = "0.1.0" }
truefix-twsapi-client = { path = "crates/truefix-twsapi-client", version = "0.1.0" }
truefix-futu-client = { path = "crates/truefix-futu-client", version = "0.1.0" }
truefix-okx-client = { path = "crates/truefix-okx-client", version = "0.1.0" }

[profile.release]
# Production builds: keep debug info off, optimize. Benchmarks live in benches/.
opt-level = 3
