[package]
name = "truefix-at"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TrueFix acceptance-test (AT) conformance suite."
publish = false

[dependencies]
truefix-core.workspace = true
truefix-session.workspace = true
truefix-dict.workspace = true
truefix-transport.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
