[package]
name = "truefix-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FIX SessionSettings and .cfg configuration."
publish = false

[dependencies]
thiserror.workspace = true
truefix-session.workspace = true
truefix-store.workspace = true
time.workspace = true

[lints]
workspace = true
