[package]
name = "truefix-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FIX message model, field types, and SOH codec (BodyLength/CheckSum)."
publish = false

[dependencies]
thiserror.workspace = true
rust_decimal.workspace = true
time.workspace = true

[lints]
workspace = true
