[package]
name = "truefix-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "FIX message model, field types, and SOH codec (BodyLength/CheckSum)."
publish = true

[dependencies]
thiserror.workspace = true
rust_decimal.workspace = true
time.workspace = true
memchr.workspace = true

[[bench]]
name = "codec"
harness = false

[lints]
workspace = true
