[package]
name = "truefix-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FIX logging (screen/file/tracing/composite)."
publish = false

[dependencies]
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
sqlx = { workspace = true, optional = true, features = ["sqlite", "postgres", "mysql-rsa"] }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
# SQL-backed log (JDBC-equivalent), bridged to async via a background writer task.
sql = ["dep:sqlx", "dep:tokio"]

[lints]
workspace = true
