[package]
name = "truefix-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FIX logging (screen/file/tracing/composite)."
publish = false

[dependencies]
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
sqlx = { workspace = true, optional = true, features = ["sqlite", "postgres", "mysql-rsa"] }
tokio = { workspace = true, optional = true }
tiberius = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
redb = { workspace = true, optional = true }
mongodb = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
# SQL-backed log (JDBC-equivalent), bridged to async via a background writer task.
sql = ["dep:sqlx", "dep:tokio"]
# MSSQL support (FR-020), via `tiberius` (a separate driver — sqlx has no official MSSQL
# support). Independent of `sql`/sqlx's PG/MySQL/SQLite trio, so it can be enabled on its own.
mssql = ["dep:tiberius", "dep:tokio-util", "dep:tokio"]
# Embedded transactional log via `redb` (US5, feature 004), bridged to async via a
# background writer task (redb's own API is synchronous). Independent of `sql`/`mssql`.
redb = ["dep:redb", "dep:tokio"]
# MongoDB-backed log (US6, feature 004), matching QuickFIX/Go's MongoDB option.
# Independent of `sql`/`mssql`/`redb`.
mongodb = ["dep:mongodb", "dep:tokio"]

[lints]
workspace = true
