[package]
name = "truefix-session"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FIX session layer: state machine, sequencing, resend, scheduling."
publish = false

[dependencies]
truefix-core.workspace = true
time.workspace = true
async-trait.workspace = true

[lints]
workspace = true
