[package]
name = "truefix-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FIX session layer: state machine, sequencing, resend, scheduling."
publish = false

[dependencies]
truefix-core.workspace = true
truefix-dict.workspace = true
time.workspace = true
async-trait.workspace = true

[lints]
workspace = true
