[package]
name = "truefix-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FIX session layer: state machine, sequencing, resend, scheduling."
publish = true

[dependencies]
truefix-core.workspace = true
truefix-dict.workspace = true
time.workspace = true
time-tz.workspace = true
async-trait.workspace = true

[[bench]]
name = "session"
harness = false

[lints]
workspace = true
