[package]
name = "truefix-twsapi-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin Interactive Brokers TWS/Gateway protocol client for TrueFix."
publish = false

[dependencies]
prost.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true
