[package]
name = "truefix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TrueFix facade: Application trait, MessageCracker, re-exports."
publish = false

[dependencies]
truefix-core.workspace = true
truefix-session.workspace = true
truefix-transport.workspace = true
truefix-config.workspace = true
truefix-store.workspace = true
truefix-log.workspace = true
truefix-dict.workspace = true
tokio.workspace = true
thiserror.workspace = true
rustls.workspace = true

[dev-dependencies]
tokio = { workspace = true }
async-trait.workspace = true
rcgen = "0.13"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
pkcs8 = "0.10"
base64 = "0.22"
webpki-roots = "0.26"

[lints]
workspace = true
