[package]
name = "truefix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "TrueFix facade: Application trait, MessageCracker, re-exports."
publish = true

[dependencies]
truefix-core.workspace = true
truefix-session.workspace = true
truefix-transport.workspace = true
truefix-config.workspace = true
truefix-store.workspace = true
truefix-log.workspace = true
truefix-dict.workspace = true
truefix-binary.workspace = true
tokio.workspace = true
thiserror.workspace = true
rustls.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
async-trait.workspace = true
rcgen = "0.13"
# "pem" (beyond the existing pkcs8/rand_core) is needed by the `binance` example to load an
# Ed25519 signing key from a PKCS#8 PEM file (`ed25519_dalek::pkcs8::DecodePrivateKey::from_pkcs8_pem`).
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core", "pem"] }
pkcs8 = "0.10"
base64 = "0.22"
webpki-roots = "0.26"
# Below: `binance` example only (a real, runnable FIX client for Binance's spot testnet/production
# FIX API -- see examples/binance/README.md).
anyhow = "1"
tracing-subscriber = "0.3"
time = { workspace = true }
truefix-log = { workspace = true, features = ["redb"] }
redb.workspace = true
# Official Binance Spot REST connector from crates.io, pinned for reproducible examples.
binance-sdk = { version = "60.0.0", features = ["spot", "margin_trading", "convert", "derivatives_trading_options"] }
http = "1"
serde_json.workspace = true

[features]
# `.cfg`-driven SQL/MSSQL backend selection (US3, feature 004, FR-003) needs the matching feature
# active across the whole chain `Engine::start` touches: `truefix-config` (to construct
# `StoreConfig::Sql`/`Mssql` while resolving `JdbcURL`), `truefix-store` (`build_store`'s dispatch
# arm), and `truefix-log` (`SqlLog`/`MssqlLog` construction for the matching log side).
sql = ["truefix-config/sql", "truefix-store/sql", "truefix-log/sql"]
mssql = ["truefix-config/mssql", "truefix-store/mssql", "truefix-log/mssql"]

[lints]
workspace = true
